--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite Counter</title>
     <script type="module" src="/src/index.js"></script>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <div id="root">
